@@ -6,7 +6,6 @@ import org.iglooproject.basicapp.core.business.announcement.model.QAnnouncement;
 import org.iglooproject.jpa.more.business.sort.ISort;
 import org.iglooproject.jpa.more.business.sort.SortUtils;
 
-import com.google.common.collect.ImmutableList;
 import com.querydsl.core.types.OrderSpecifier;
 
 public enum AnnouncementSort implements ISort<OrderSpecifier<?>> {
@@ -14,7 +13,7 @@ public enum AnnouncementSort implements ISort<OrderSpecifier<?>> {
 	ID {
 		@Override
 		public List<OrderSpecifier<?>> getSortFields(SortOrder sortOrder) {
-			return ImmutableList.of(
+			return List.of(
 				SortUtils.orderSpecifier(this, sortOrder, QAnnouncement.announcement.id)
 			);
 		}
@@ -26,7 +25,7 @@ public enum AnnouncementSort implements ISort<OrderSpecifier<?>> {
 	PUBLICATION_START_DATE_TIME {
 		@Override
 		public List<OrderSpecifier<?>> getSortFields(SortOrder sortOrder) {
-			return ImmutableList.of(
+			return List.of(
 				SortUtils.orderSpecifier(this, sortOrder, QAnnouncement.announcement.publication.startDateTime)
 			);
 		}
@@ -35,11 +34,5 @@ public enum AnnouncementSort implements ISort<OrderSpecifier<?>> {
 			return SortOrder.ASC;
 		}
 	};
-
-	@Override
-	public abstract List<OrderSpecifier<?>> getSortFields(SortOrder sortOrder);
-
-	@Override
-	public abstract SortOrder getDefaultOrder();
 
 }
